@@ -118,10 +118,11 @@ function(
 	}
 	resPair<-rep(0, nrow(reference)*length(method))
 	resSingle<-rep(0, nrow(reference)*length(method))
-	if(length(which(sapply(resTmpSingle, length)>0))>0)
-		resSingle<-Reduce("+", resTmpSingle)
-	if(length(which(sapply(resTmpPair, length)>0))>0)
+
+	if(isPaired)
 		resPair<-Reduce("+", resTmpPair)
+
+	resSingle<-Reduce("+", resTmpSingle)
 
 	res<- resPair+resSingle
 
