@@ -114,10 +114,10 @@ function(
 			BPPARAM=bpparam)
 	}
 	
-	if(length(which(sapply(resTmpSingle, length)>0))>0)
-		resSingle<-Reduce("+", resTmpSingle)
-	if(length(which(sapply(resTmpPair, length)>0))>0)
+	if(isPaired)
 		resPair<-Reduce("+", resTmpPair)
+
+	resSingle<-Reduce("+", resTmpSingle)
 
 	res<- resPair+resSingle
 
